Add instructor dashboard help tokens
Define additional tokens for instructor dashboard tabs and add them to
the individual template files

--- a/docs/lms_config.ini
+++ b/docs/lms_config.ini
@@ -17,7 +17,21 @@ pdf_file = open-edx-learner-guide.pdf
 [pages]
 default = index.html
 
-instructor = SFD_instructor_dash_help.html
+instructor = manage_live_course/course_data.html
+
+instructormembership = manage_live_course/course_enrollment.html#options-for-enrolling-learners-in-a-course
+
+instructorcohorts = course_features/cohorts/cohorts_overview.html#using-cohorts-in-your-courses
+
+instructoradmin = student_progress/course_grades.html#learner-grades-and-grading
+
+instructordatadownload = student_progress/course_student.html#learner-data
+
+instructoranalytics = student_progress/course_student.html#learner-data
+
+instructoremail = manage_live_course/bulk_email.html
+
+instructorcerts = student_progress/checking_student_progress.html#checking-student-progress-and-issuing-certificates
 
 course = index.html
 
